--- a/Public/CSS/inicio.css
+++ b/Public/CSS/inicio.css
@@ -3,6 +3,7 @@
 /* Estilos para el elemento <main> */
 main {
   margin: 40px; /* Márgenes alrededor del elemento <main> */
+  background-color: blue;
 }
 
 main > a {
